euphony-sc-core/src/snapshots/euphony_sc_core__osc__server__status_test.snap
---
source: euphony-sc-core/src/osc.rs
expression: msg
---
Ok(
    Message(
        OscMessage {
            addr: "/status",
            args: [],
        },
    ),
)
